dziennik przy Book oraz Author, paramsy, paramsy w testach,