@@ -1,8 +1,10 @@
 package com.pekao.projektpekao.controller.Comments;
 
+import com.pekao.projektpekao.controller.Book.BookEntityMapper;
 import com.pekao.projektpekao.controller.Book.BookForCommentEntityMapper;
 import com.pekao.projektpekao.controller.Users.UserEntityMapper;
-import com.pekao.projektpekao.domain.Comment;
+import com.pekao.projektpekao.domain.Comment.Comment;
+import com.pekao.projektpekao.domain.Comment.CommentParams;
 
 import java.util.List;
 import java.util.stream.Collectors;
@@ -15,15 +17,28 @@ public final class CommentEntityMapper {
         return Comment.builder()
                 .id(commentDto.getId())
                 .content(commentDto.getContent())
-                .user(UserEntityMapper.userEntity(commentDto.getUserDto()))
+                .user(UserEntityMapper.toUserEntity(commentDto.getUserDto()))
                 .book(BookForCommentEntityMapper.toBookEntity(commentDto.getBookForCommentDto()))
                 .build();
     }
 
-    public static List<Comment> toCommentListEntity(List<CommentDto> commentList) {
-        return commentList.stream()
+    public static List<Comment> fromCommentDtoListToEntityList(List<CommentDto> commentDtoList) {
+        return commentDtoList.stream()
                 .map(CommentEntityMapper::toCommentEntity)
-                .collect(Collectors.toList());
+                .toList();
     }
 
+    public static Comment toCommentEntity(CommentParams commentParams) {
+        return Comment.builder()
+                .content(commentParams.getContent())
+                .user(UserEntityMapper.toUserEntity(commentParams.getUserParams()))
+                .build();
+    }
+
+    public static List<Comment> fromCommentParamsToEntityList(List<CommentParams> commentParamsList) {
+        return commentParamsList.stream()
+                .map(CommentEntityMapper::toCommentEntity)
+                .toList();
+
+    }
 }
